Minor Correction on display for MLP

--- a/1. Neural Network - Multilayer Perceptron.ipynb
+++ b/1. Neural Network - Multilayer Perceptron.ipynb
@@ -5723,6 +5723,7 @@
     "\n",
     "print(\"Student Math Dataset One Hot Encoded\")\n",
     "print(\"Total number of columns: \", stdMath_df_ohe.shape[1], \"Total number of rows: \", stdMath_df_ohe.shape[0])\n",
+    "display(stdMath_df_ohe.head())\n",
     "print(\"Student Math Dataset One Hot Encoded Normalized\")\n",
     "print(\"Total number of columns: \", stdMath_df_ohe_norm.shape[1], \"Total number of rows: \", stdMath_df_ohe_norm.shape[0])\n",
     "display(stdMath_df_ohe_norm.head())\n",
