Updated Comments Completed decision tree with result

--- a/1. Neural Network - MLP Classifier.ipynb
+++ b/1. Neural Network - MLP Classifier.ipynb
@@ -6411,15 +6411,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 4: Build , Train, Evaluate the model\n",
-    "# * Both dataset target are continuous, use MLPRegressor\n",
-    "# * Evaluate the model with error based metrics (MAE, MSE, RMSE, R2)\n",
-    "# * Plot the training history\n",
-    "# * Plot the prediction vs actual target\n",
+    "# * Both dataset target are continuous, use MLPClassifier\n",
+    "# * Evaluate the model with Classification report and Confusion matrix\n",
+    "# * Plot the confusion matrix\n",
     "\n",
     "result = pd.DataFrame(columns=[\"Accuracy\"])\n",
     "\n",
@@ -6481,7 +6480,7 @@
     "    # verbose=True,\n",
     ")\n",
     "\n",
-    "# Standard MLPRegressor Model\n",
+    "# Standard MLPClassifier Model\n",
     "standardModel = MLPClassifier(\n",
     "    hidden_layer_sizes=(16, 8, 8),\n",
     "    activation='relu',\n",
@@ -8015,7 +8014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -8242,7 +8241,7 @@
     "display(result)\n",
     "\n",
     "# Step 6: Save the result\n",
-    "result.to_csv(\"output/2. Evaluation Result.csv\")"
+    "result.to_csv(\"output/1. MLP Evaluation Result.csv\")"
    ]
   },
   {
