--- a/3. Naive Bayes - Gaussian Naive Bayes.ipynb
+++ b/3. Naive Bayes - Gaussian Naive Bayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5932,14 +5932,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 4: Train the model\n",
     "# * Train the Gaussian Naive Bayes model\n",
-    "# * Evaluate the model with error based metrics (Accuracy, Precision, Recall, F1 Score)\n",
-    "# * Plot the prediction vs actual target (Confusion Matrix)\n",
+    "# * Both dataset target are continuous, use MLPClassifier\n",
+    "# * Evaluate the model with Classification report and Confusion matrix\n",
+    "# * Plot the confusion matrix\n",
     "\n",
     "result = pd.DataFrame(columns=['Accuracy'])\n",
     "\n",
@@ -6703,7 +6704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -6840,7 +6841,7 @@
     "display(result)\n",
     "\n",
     "# Step 6: Save the result\n",
-    "result.to_csv(\"output/3. Evaluation Result.csv\")"
+    "result.to_csv(\"output/3. Gaussian Naive Bayes Evaluation Result.csv\")"
    ]
   }
  ],
