--- a/Data Proprocessing.ipynb
+++ b/Data Proprocessing.ipynb
@@ -1105,6 +1105,26 @@
     "print(\"Label Encoded Student Dataset\")\n",
     "display(stdMath_df_le)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "X = np.array([[-1, -1], [-2, -1], [-3, -2], [1, 1], [2, 1], [3, 2]])\n",
+    "Y = np.array([1, 1, 1, 2, 2, 2])\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "clf = GaussianNB()\n",
+    "clf.fit(X, Y)\n",
+    "print(clf.predict([[-0.8, -1]]))\n",
+    "clf_pf = GaussianNB()\n",
+    "clf_pf.partial_fit(X, Y, np.unique(Y))\n",
+    "print(clf_pf.predict([[-0.8, -1]]))"
+   ]
   }
  ],
  "metadata": {
